--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -265,7 +265,7 @@
   "config_showNewTabActionSelector_label":               { "message": "Show selector button on the \"New Tab\" button, to specify where the new tab is opened in, when the button is pointed" },
   "config_showContextualIdentitiesSelector_label":       { "message": "Show container selector button on the \"New Tab\" button, when the button is pointed" },
 
-  "config_newTabAction_caption": { "message": "Behavior for new tab actions (other toolbar buttons, keyboard shortcuts, and others)" },
+  "config_newTabAction_caption": { "message": "Other \"New Blank Tab\" actions (toolbar buttons, keyboard shortcuts, etc.)" },
   "config_autoAttachOnNewTabCommand_before": { "message": "Open new blank tab as" },
   "config_autoAttachOnNewTabCommand_noControl": { "message": "(no control)" },
   "config_autoAttachOnNewTabCommand_independent": { "message": "an independent tab" },
@@ -273,7 +273,7 @@
   "config_autoAttachOnNewTabCommand_sibling": { "message": "a sibling of the current tab" },
   "config_autoAttachOnNewTabCommand_nextSibling": { "message": "the next sibling of the current tab" },
   "config_autoAttachOnNewTabCommand_after": { "message": "\u200b" },
-  "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before": { "message": "Guess a newly opened tab as opened by \"New Tab\" action, when it is opened with the URL " },
+  "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before": { "message": "Guess a newly opened tab as opened by \"New Blank Tab\" action, when it is opened with the URL " },
   "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_after": { "message": "\u200b" },
 
   "config_autoAttachOnNewTabButtonMiddleClick_before": { "message": "For middle click, open new blank tab as" },
@@ -284,7 +284,9 @@
   "config_autoAttachOnNewTabButtonMiddleClick_nextSibling": { "message": "the next sibling of the current tab" },
   "config_autoAttachOnNewTabButtonMiddleClick_after": { "message": "\u200b" },
 
-  "config_autoAttachOnDuplicated_before": { "message": "For middle click on the \"Reload\" button, duplicate the tab as" },
+  "config_duplicateTabAction_caption": { "message": "Duplicate Tabs (middle click on the \"Reload\" button, etc.)" },
+
+  "config_autoAttachOnDuplicated_before": { "message": "Duplicate the tab as" },
   "config_autoAttachOnDuplicated_noControl": { "message": "(no control)" },
   "config_autoAttachOnDuplicated_independent": { "message": "an independent tab" },
   "config_autoAttachOnDuplicated_child": { "message": "a child of the current tab" },
@@ -292,7 +294,7 @@
   "config_autoAttachOnDuplicated_nextSibling": { "message": "the next sibling of the current tab" },
   "config_autoAttachOnDuplicated_after": { "message": "\u200b" },
 
-  "config_sameSiteOrphan_caption": { "message": "When new tab with a website same to the current tab is opened from the location bar (or others)" },
+  "config_sameSiteOrphan_caption": { "message": "New tab with the same website as the current tab from the location bar or from outside Firefox" },
   "config_autoAttachSameSiteOrphan_before": { "message": "Open as" },
   "config_autoAttachSameSiteOrphan_noControl": { "message": "(no control)" },
   "config_autoAttachSameSiteOrphan_independent": { "message": "an independent tab" },
@@ -323,7 +325,9 @@
   "config_autoGroupNewTabsFromPinned_label": { "message": "Auto-group tabs opened from same pinned tab" },
   "config_renderTreeInGroupTabs_label": { "message": "Render tree in group tabs" },
 
-  "config_inheritContextualIdentityToNewChildTab_label": { "message": "Inherit the container of the parent tab to a new blank tab (*Please note that the new tab won't inherit the container of the previously active tab, if it is opened as an independent tab)" },
+  "config_newTabContainer_caption": { "message": "Container of new blank child tabs" },
+  "config_inheritContextualIdentityToNewChildTab_label": { "message": "Inherit the container of the parent tab to a new blank child tab" },
+  "config_inheritContextualIdentityToNewChildTab_description": { "message": "(*Please note that the new tab won't inherit the container of the previously active tab, if it is opened as an independent tab.)" },
 
 
   "config_treeBehavior_caption": { "message": "Tree Behavior" },
