Deactivate old translations

--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -265,7 +265,7 @@
   "config_showNewTabActionSelector_label":               { "message": "Auswahl wo der neue Tab geöffnet werden soll, auf der Schaltfläche \"Neuer Tab \" anzeigen, wenn der Cursor auf die Schaltfläche zeigt" },
   "config_showContextualIdentitiesSelector_label":       { "message": "Auswahl der Tab-Umgebung auf der Schaltfläche \"Neuer Tab\" anzeigen, wenn der Cursor auf die Schaltfläche zeigt" },
 
-  "config_newTabAction_caption": { "message": "Verhalten für Aktionen, die einen neuen Tab öffnen (andere Symbolleisten-Schaltflächen, Tastenkombinationen und andere)" },
+  "__OLD__config_newTabAction_caption": { "message": "Verhalten für Aktionen, die einen neuen Tab öffnen (andere Symbolleisten-Schaltflächen, Tastenkombinationen und andere)" },
   "config_autoAttachOnNewTabCommand_before": { "message": "Neuen leeren Tab als " },
   "config_autoAttachOnNewTabCommand_noControl": { "message": "(keine Steuerung)" },
   "config_autoAttachOnNewTabCommand_independent": { "message": "eigenständigen Tab" },
@@ -273,7 +273,7 @@
   "config_autoAttachOnNewTabCommand_sibling": { "message": "Tab auf der Ebene des aktiven Tab" },
   "config_autoAttachOnNewTabCommand_nextSibling": { "message": "direkten Nachbar auf der Ebene des aktiven Tab" },
   "config_autoAttachOnNewTabCommand_after": { "message": "öffnen" },
-  "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before": { "message": "Einen neuen Tab behandeln als sei er durch den Befehl \"Neuer Tab\" geöffnet worden, wenn der mit dieser URL geöffnet wird:" },
+  "__OLD__config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before": { "message": "Einen neuen Tab behandeln als sei er durch den Befehl \"Neuer Tab\" geöffnet worden, wenn der mit dieser URL geöffnet wird:" },
   "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_after": { "message": "\u200b" },
 
   "config_autoAttachOnNewTabButtonMiddleClick_before": { "message": "Mit der mittleren Maustaste einen neuen leeren Tab öffnen als" },
@@ -284,7 +284,7 @@
   "config_autoAttachOnNewTabButtonMiddleClick_nextSibling": { "message": "direkten Nachbar auf der Ebene des aktiven Tab" },
   "config_autoAttachOnNewTabButtonMiddleClick_after": { "message": "\u200b" },
 
-  "config_autoAttachOnDuplicated_before": { "message": "Beim Klick mit der mittleren Maustaste auf die Schaltfläche \"Aktualisieren\" den Tab duplizieren als" },
+  "__OLD__config_autoAttachOnDuplicated_before": { "message": "Beim Klick mit der mittleren Maustaste auf die Schaltfläche \"Aktualisieren\" den Tab duplizieren als" },
   "config_autoAttachOnDuplicated_noControl": { "message": "(keine Steuerung)" },
   "config_autoAttachOnDuplicated_independent": { "message": "eigenständigen Tab" },
   "config_autoAttachOnDuplicated_child": { "message": "untergeordneten Tab des aktiven Tabs" },
@@ -292,7 +292,7 @@
   "config_autoAttachOnDuplicated_nextSibling": { "message": "direkten Nachbar auf der Ebene des aktiven Tab" },
   "config_autoAttachOnDuplicated_after": { "message": "\u200b" },
 
-  "config_sameSiteOrphan_caption": { "message": "Wenn über die Adressleiste (oder andere) ein neuer Tab geöffnet wird mit der gleichen Website wie im aktuellen Tab" },
+  "__OLD__config_sameSiteOrphan_caption": { "message": "Wenn über die Adressleiste (oder andere) ein neuer Tab geöffnet wird mit der gleichen Website wie im aktuellen Tab" },
   "config_autoAttachSameSiteOrphan_before": { "message": "Öffnen als" },
   "config_autoAttachSameSiteOrphan_noControl": { "message": "(keine Steuerung)" },
   "config_autoAttachSameSiteOrphan_independent": { "message": "unabhängigen Tab" },
@@ -324,6 +324,7 @@
   "config_renderTreeInGroupTabs_label": { "message": "Zeige Baum in Gruppen-Tab" },
 
   "config_inheritContextualIdentityToNewChildTab_label": { "message": "Die Tab-Umgebung des übergeordneten Tabs an einen neuen leeren Tab vererben" },
+  "config_inheritContextualIdentityToNewChildTab_description": { "message": "\u200b" },
 
 
   "config_treeBehavior_caption": { "message": "Verhalten der Zweige" },
