--- a/webextensions/_locales/ru/messages.json
+++ b/webextensions/_locales/ru/messages.json
@@ -265,7 +265,7 @@
   "config_showNewTabActionSelector_label":               { "message": "Показывать кнопку выбора на кнопке \"Новая вкладка\", чтобы указать, где открывается новая вкладка" },
   "config_showContextualIdentitiesSelector_label":       { "message": "Показывать кнопку выбора контейнера на кнопке \"Новая вкладка\" " },
 
-  "config_newTabAction_caption": { "message": "Манипуляции с новой вкладкой (другие кнопки панели, горячие клавиши и прочее)" },
+  "__OLD__config_newTabAction_caption": { "message": "Манипуляции с новой вкладкой (другие кнопки панели, горячие клавиши и прочее)" },
   "config_autoAttachOnNewTabCommand_before": { "message": "Открыть новую пустую вкладку как" },
   "config_autoAttachOnNewTabCommand_noControl": { "message": "(не контролировать)" },
   "config_autoAttachOnNewTabCommand_independent": { "message": "отдельную вкладку" },
@@ -273,7 +273,7 @@
   "config_autoAttachOnNewTabCommand_sibling": { "message": "одноуровневую вкладку" },
   "config_autoAttachOnNewTabCommand_nextSibling": { "message": "следующую одноуровневую вкладку" },
   "config_autoAttachOnNewTabCommand_after": { "message": "\u200b" },
-  "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before": { "message": "Считать вновь открытую вкладку, открытую с помощью действия \"Новая вкладка\", когда она открывается с URL: " },
+  "__OLD__config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before": { "message": "Считать вновь открытую вкладку, открытую с помощью действия \"Новая вкладка\", когда она открывается с URL: " },
   "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_after": { "message": "\u200b" },
 
   "config_autoAttachOnNewTabButtonMiddleClick_before": { "message": "Кликом колесика мыши открыть новую пустую вкладку как" },
@@ -284,7 +284,7 @@
   "config_autoAttachOnNewTabButtonMiddleClick_nextSibling": { "message": "следующую одноуровневую вкладку" },
   "config_autoAttachOnNewTabButtonMiddleClick_after": { "message": "\u200b" },
 
-  "config_autoAttachOnDuplicated_before": { "message": "Кликом колесика мыши на кнопку \"Перезагрузить\", копировать вкладку как" },
+  "__OLD__config_autoAttachOnDuplicated_before": { "message": "Кликом колесика мыши на кнопку \"Перезагрузить\", копировать вкладку как" },
   "config_autoAttachOnDuplicated_noControl": { "message": "(не контролировать)" },
   "config_autoAttachOnDuplicated_independent": { "message": "отдельную вкладку" },
   "config_autoAttachOnDuplicated_child": { "message": "дочернюю текущей" },
@@ -292,7 +292,7 @@
   "config_autoAttachOnDuplicated_nextSibling": { "message": "следующую одноуровневую вкладку" },
   "config_autoAttachOnDuplicated_after": { "message": "\u200b" },
 
-  "config_sameSiteOrphan_caption": { "message": "Когда новая вкладка с сайтом, как в текущей вкладке, открывается из адресной строки (или другое)" },
+  "__OLD__config_sameSiteOrphan_caption": { "message": "Когда новая вкладка с сайтом, как в текущей вкладке, открывается из адресной строки (или другое)" },
   "config_autoAttachSameSiteOrphan_before": { "message": "Открыть как" },
   "config_autoAttachSameSiteOrphan_noControl": { "message": "(не контролировать)" },
   "config_autoAttachSameSiteOrphan_independent": { "message": "отдельную вкладку" },
@@ -324,6 +324,7 @@
   "config_renderTreeInGroupTabs_label": { "message": "Рендеринг дерева в группе вкладок" },
 
   "config_inheritContextualIdentityToNewChildTab_label": { "message": "Наследовать контейнер родительской вкладки новой пустой вкладкой" },
+  "config_inheritContextualIdentityToNewChildTab_description": { "message": "\u200b" },
 
 
   "config_treeBehavior_caption": { "message": "Поведение дерева" },
